--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,77 @@
-label {
+body{
+	background: #b6b6b6;
+	margin: 0;
+	padding: 0;
+	font-family: arial
+}
+
+#login_form{
+	width: 300px;
+	background: #f0f0f0;
+	border:1px solid white;
+	margin: 250px auto;
+	padding: 1em;
+	-moz-border-radius: 3px;
+	-webkit-border-radius:3px;
+}
+
+h1,h2,h3,h4,h5{
+	margin-top: 0;
+	font-family: arial black , arial;
+	text-align: center;
+}
+
+input[type=text], input[type=password]{
+	display: block;
+	margin: 0 0 1em 0;
+	width:280px;
+	border:5px;
+	-moz-border-radius: 3px;
+	-webkit-border-radius:1px;
+	padding: 1em;
+}
+
+input[type=submit], form a{
+	border: none;
+	margin-right: 1em;
+	padding: 6px;
+	text-decoration: none;
+	font-size: 12px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius:4px;
+	background: #348075;
+	color: white;
+	box-shadow: 0 1px 0 white;
+	-moz-box-shadow: 0 1px 0 white;
+	-webkit-box-shadow: 0 1px 0 white;
+}
+
+input[type=submit]:hover, form a:hover{
+	background: #287568;
+	cursor: pointer;
+};
+
+.error{
+	color: #393939;
+	font-size: 15px;
+}
+
+fieldset{
+	width:300px;
+	margin: auto;
+	margin-bottom: 2em;
 	display: block;
 }
 
-.error{
-	color:#373737;
-	font-style: italic;	
+h1{
+	text-shadow: 0 1px 0 white;
 }
 
-#newsletter_form{
+#totalinfo{
 	background: #e3e3e3;
-	width: 20%;
-	margin: 5em auto 0;
-	padding: 32px;
-	border: 3px solid #d5d5d5;
-}
-
-#newsletter_form form input[type=text]{
+	border-top: 1px solid white;
+	position: absolute;
+	bottom: 0;
 	width: 100%;
-}
-
-h2{
-	margin-top: -54px;
-	color: #002828;
-	font-family: arial;
-}
-
-input[type=submit]{
-	border: 1px solid #062828;
-	background: #002828;
-	color: #e3e3e3;
-	padding: .5em;
-	cursor: pointer;
-}
-
-input[type=submit].hover{
-	background: #902222;
-
+	padding: .7em .7em .7em 2em; 
 }
